@@ -1,3 +1,7 @@
+2004-02-25  Miklos Szeredi <mszeredi@inf.bme.hu>
+
+	* Clean up option parsing in fuse_main()
+
 2004-02-20  Miklos Szeredi <mszeredi@inf.bme.hu>
 
 	* removed old way of mounting (fusermount mountpoint program)
